[gd_scene load_steps=4 format=3 uid="uid://db032jmw8wnnk"]

[ext_resource type="Script" path="res://Framework/Scripts/User Interface/ChapterMenu.gd" id="1_22yvn"]
[ext_resource type="FontFile" uid="uid://bblqs5iarcm1" path="res://Game Demo/Fonts/static/Quicksand-Medium.ttf" id="2_hv6hl"]

[sub_resource type="LabelSettings" id="LabelSettings_lrfnm"]
font = ExtResource("2_hv6hl")
font_size = 25

[node name="ChapterMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22yvn")
scene = "MainMenu"
timer_time = 0.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.627451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.0
offset_right = -309.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LblTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CHAPTER_3"
label_settings = SubResource("LabelSettings_lrfnm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LblDescription" type="Label" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "CHAPTER_0_DESCRIPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnStart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "EXIT_GAME"

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Panel/VBoxContainer/BtnStart" to="." method="_on_btn_exit_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
